DMC-413 - DMC-413 - Deleting AI Job Configuration returns 500 Internal Server Error - Implement graceful handling for AI Job Configuration deletion with existing executions
Implemented via automated workflow (Run: 16999421234)
Co-authored-by: CLI Agent <cli-agent@dmtools>